updating config/fetch info

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"accessKeyId" : "AKIAIRSNMSP4WGHLMBNQ",
-	"secretAccessKey" : "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",
+	"accessKeyId" : "AKIAJWKAKGFJJLZ3HNCA",
+	"secretAccessKey" : "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",
 	"region" : "us-east-1"
 }
